--- a/src/app/components/template/template.component.html
+++ b/src/app/components/template/template.component.html
@@ -1,6 +1,6 @@
 <h4>Formularios <small>template</small></h4>
 <hr>
-<form>
+<form (ngSubmit)="guardar()" novalidate="" >
 
   <div>
 
@@ -10,7 +10,11 @@
 
         <input class="form-control"
                type="text"
-               placeholder="Nombre">
+               placeholder="Nombre"
+               name="nombre"
+               minlength="5"
+               ngModel
+               required>
       </div>
     </div>
 
