--- a/src/app/components/template/template.component.html
+++ b/src/app/components/template/template.component.html
@@ -14,8 +14,17 @@
                name="nombre"
                minlength="5"
                [(ngModel)]="usuario.nombre"
-               required>
+               required
+               #nombre="ngModel">
+
+        <div *ngIf="nombre.errors?.required">
+        nombre es requerido
+        </div>
+        <div *ngIf="nombre.errors?.minlength">
+        al menos {{nombre.errors.minlength.requiredLength}} caracteres
+         </div>
       </div>
+      
     </div>
 
     <div class="form-group row">
@@ -27,7 +36,13 @@
                placeholder="Apellido"
                name="apellido"
                [(ngModel)]="usuario.apellido"
-               required>
+               required
+               #apellido="ngModel">
+
+             <div *ngIf="apellido.errors?.required">
+              Apellido es requerido
+              </div>
+                
       </div>
     </div>
 
@@ -44,7 +59,14 @@
              [(ngModel)]="usuario.email"
              required
              pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,3}$"
-             >
+             #email="ngModel" >
+
+             <div *ngIf="email.errors?.required">
+                Email es requerido
+                  </div>
+             <div *ngIf="email.errors?.pattern">
+                debe ingresar un formato valido de email
+                </div>
     </div>
   </div>
 
